@@ -1,5 +1,6 @@
 procps-3.1.5 --> procps-3.1.6
 
+watch: new --no-title option
 handle SPARC Linux badness
 rare crash fixed
 compile with gcc 2.91.xx again
